# jinguyuan-demo-mcp

./: .gitignore  .mcp.json  CLAUDE.md  README.md  calculate_age.py  pyproject.toml  requirements.txt  server.py  skill.json  skill.md  test_call.py  test_client.py
