[project]
name = "jinguyuan-demo-mcp"
version = "0.2.0"
description = "MCP demo server for Jinguyuan Dumpling Restaurant, provides WiFi password, menu, queue status"
authors = [
  { name = "zentrix566", email = "zentrix566@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.0.0",
  "fastapi>=0.100.0",
  "uvicorn>=0.23.2",
  "pydantic>=2.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
